# BookManagementSystem

./: .gitignore  CMakeLists.txt  bookmanagementsystem.cpp  bookmanagementsystem.h  bookmanagementsystem.ui  build.ps1  build_log.txt  main.cpp
console/: about_menu.cpp  about_menu.h  admin_menu.cpp  admin_menu.h  app.cpp  app.h  menu_base.cpp  menu_base.h  user_menu.cpp  user_menu.h
console/admin_submenu/: book_monitor_menu.cpp  book_monitor_menu.h  bookcopy_monitor_menu.cpp  bookcopy_monitor_menu.h  loan_monitor_menu.cpp  loan_monitor_menu.h  user_monitor_menu.cpp  user_monitor_menu.h
console/user_submenu/: loan_menu.cpp  loan_menu.h  personal_info_menu.cpp  personal_info_menu.h  search_info_menu.cpp  search_info_menu.h
dao/: bookcopydao.cpp  bookcopydao.h  bookdao.cpp  bookdao.h  databasemanager.cpp  databasemanager.h  datastore.cpp  datastore.h  finedao.cpp  finedao.h  loandao.cpp  loandao.h  reservationdao.cpp  reservationdao.h  userdao.cpp  userdao.h
data/: bookcopies.txt  books.txt  loans.txt  users.txt
model/: admin.cpp  admin.h  book.cpp  book.h  bookcopy.cpp  bookcopy.h  borrow.cpp  borrow.h  class_diagram.puml  date.cpp  date.h  fine.cpp  fine.h  icomparable.h  loan.cpp  loan.h  location.cpp  location.h  patron.cpp  patron.h  reservation.cpp  reservation.h  user.cpp  user.h  vippatron.cpp  vippatron.h
report/: flow.mmd  model.mmd  modules.mmd  report.md  sourcecode.txt  structure.mmd  uml.mmd
services/: bookcopyservice.cpp  bookcopyservice.h  bookservice.cpp  bookservice.h  fineservice.cpp  fineservice.h  loanservice.cpp  loanservice.h  locationservice.cpp  locationservice.h  reservationservice.cpp  reservationservice.h  timeservice.cpp  timeservice.h  userservice.cpp  userservice.h
ui/: adminsystem.cpp  adminsystem.h  adminsystem.ui  bookmanagementsystem.cpp  usersystem.ui
ui/adminsystem/: adminsystem.cpp  adminsystem.h  adminsystem.ui
ui/adminsystem/addbookdialog/: addbookdialog.cpp  addbookdialog.h  addbookdialog.ui
ui/adminsystem/delbookdialog/: delbookdialog.cpp  delbookdialog.h  delbookdialog.ui
ui/main/: bookmanagementsystem.cpp  bookmanagementsystem.h  bookmanagementsystem.ui
ui/usersystem/: usersystem.cpp  usersystem.h  usersystem.ui
